# 3dp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile  README.md  SSAO_8cpp.html  SSAO_8cpp_source.html  allocator_8h.html  allocator_8h_source.html  annotated.html  array_8h.html  array_8h_source.html  assets_8cpp.html  assets_8cpp_source.html  assets_8h.html  assets_8h_source.html  basic_8cpp.html  basic_8cpp_source.html  bug.html  camera_8cpp.html  camera_8cpp_source.html  camera_8h.html  camera_8h_source.html  classAllocator-members.html  classAllocator.html  classArray-members.html  classArray.html  classFreeListAllocator-members.html  classFreeListAllocator.html  classHeapAllocator-members.html  classHeapAllocator.html  classLinearAllocator-members.html  classLinearAllocator.html  classMD5-members.html  classMD5.html  classPoolAllocator-members.html  classPoolAllocator.html  classProxyAllocator-members.html  (+345 more)
CMake/modules/: cotire.cmake
core/extra/: CMakeLists.txt
core/extra/include/extra/: allocator.h  array.h  extra.h  print.h  typedef.h
core/extra/include/extra/allocator/: allocator.h  free_list_allocator.h  linear_allocator.h  pool_allocator.h  proxy_allocator.h  stack_allocator.h
core/extra/src/: print.cpp
core/extra/src/allocator/: free_list_allocator.cpp  linear_allocator.cpp  pool_allocator.cpp  proxy_allocator.cpp  stack_allocator.cpp
core/flare/: CMakeLists.txt
core/flare/assets/: basic.glsl  lighting.glsl  shadow.glsl  skybox.glsl  ssao.glsl  ssaoBlur.glsl
core/flare/assets/shader/: basic.glsl  geometry.glsl  lighting.glsl  resolvemsaa.glsl  shadow.glsl  skybox.glsl  ssao.glsl  ssaoBlur.glsl
core/flare/assets/shader/include/: CalcTexCoord.glsl  Light.glsl  LinearizeDepth.glsl  Material.glsl
core/flare/include/flare/: asset.h  assets.h  components.h  debug.h  engine.h  flare.h  game_state.h  info.h  input.h  loader.h  passes.h  render.h  state.h
core/flare/include/flare/assets/: material.h  model.h  shader.h  skybox.h  texture.h
core/flare/include/flare/components/: camera.h  object.h  properties.h
core/flare/src/: asset.cpp  assets.cpp  debug.cpp  engine.cpp  info.cpp  input.cpp  loader.cpp  render.cpp
core/flare/src/assets/: material.cpp  model.cpp  shader.cpp  skybox.cpp  texture.cpp
core/flare/src/components/: camera.cpp  object.cpp
core/flare/src/passes/: SSAO.cpp  basic.cpp  geometry.cpp  lighting.cpp  postfx.cpp  resolvemsaa.cpp  shadow.cpp  skybox.cpp  ssao.cpp
core/flux/: CMakeLists.txt
core/fuse/: CMakeLists.txt
core/fuse/include/fuse/: component.h  entity.h  fuse.h  manager.h
core/fuse/src/: component.cpp  entity.cpp  manager.cpp
demo/: CMakeLists.txt  Makefile  cmake_install.cmake
demo/assets/: information.json
demo/include/: standard.h
demo/make/: base
demo/sandbox/: base.flx  massif.out.11274
demo/src/: demo.cpp  main.cpp
extra/: Makefile  cmake_install.cmake
flare/: CMakeLists.txt  Makefile  cmake_install.cmake
flare/src/: debug.cpp  engine.cpp
flux/: CMakeLists.txt  Makefile  cmake_install.cmake
fluxuate/: CMakeLists.txt  Makefile  cmake_install.cmake
fluxuate/include/: flux.h  standard.h
fluxuate/sandbox/assets/: test.fragment
fluxuate/src/: fluxuate.cpp
fuse/: CMakeLists.txt  Makefile  cmake_install.cmake  component.h  entity.h
fuse/src/: component.cpp
game/: CMakeLists.txt  base.flx
game/assets/: container.json  cube.mtl  directional.fragment  directional.json  gausian2.glsl  geometry.fragment  geometry.json  geometry.vertex  house.mtl  lamp.fragment  lamp.json  lamp.vertex  lighting.fragment  lighting.glsl  lighting.json  lighting.vertex  object.fragment  object.vertex  quad.mtl  rungholt.mtl  sponza.mtl  ssao.fragment  ssao.json  ssao.vertex  ssaoBlur.fragment  ssaoBlur.glsl  ssaoBlur.json  ssaoBlur.vertex  test.glsl
game/assets (kopie)/: object.fragment  object.json  object.vertex  rungholt.mtl
game/assets (nog een kopie)/: house (kopie).mtl  house.fbx  house.mtl  rungholt.mtl
game/assets.old/: gausian.glsl  scanline.glsl
game/assets.test/material/: diamond_ore.json
game/assets.test/shader/: lamp.fragment  object.fragment  object.vertex
game/assets/model/: lost_empire.mtl  sponza.mtl
game/assets/shader/: gausian.glsl  gausian1.glsl  gausian2.glsl  scanline.glsl  scanline.glsl.ignore
game/include/: camera.h  demo.h  gausian.h  postfx.h  scanline.h  spin.h  standard.h
game/src/: camera.cpp  demo.cpp  gausian.cpp  postfx.cpp  scanline.cpp
imgui/: CMakeLists.txt  Makefile
include/: engine.h  flare.h  flux.h  input.h
include/extra/: print.h  typedef.h
include/flare/: flare.h  input.h  loader.h  log.h  render.h  typedef.h
include/flux/: flux.h
include/fuse/: component.h  entity.h  fuse.h
include/jsoncons/: json1.hpp
leakage/: Makefile
make/: base
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+84 more)
src/: engine.cpp  flux.cpp  input.cpp  loader.cpp  log.cpp  render.cpp
todo/: todo.txt
tools/: build_assets.sh
tools/fluxuate/: CMakeLists.txt  Makefile
tools/fluxuate/assets/model/: quad.mtl
tools/fluxuate/assets/shader/: basic.glsl  lighting.glsl
tools/fluxuate/assets/shader/include/: CalcTexCoord.glslm  Light.glsl  Material.glsl
tools/fluxuate/include/: flux.h  plugin.h  pngl.h  read_png.h  standard.h
tools/fluxuate/make/: base
tools/fluxuate/sandbox/: base.flx
tools/fluxuate/sandbox/assets/: test.vertex
tools/fluxuate/src/: fluxuate.cpp  objReader.cpp  pngl.cpp  read_png.cpp
tools/launcher/: CMakeLists.txt
tools/launcher/src/: launcher.cpp
tools/plugins/glsl/: CMakeLists.txt  plugin_glsl.cpp
tools/plugins/png/: CMakeLists.txt  plugin_png.cpp  plugin_png.h
(+35 files in other folders)
